<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.ActivityPhongHoc">

    <TextView
        style="@style/title"
        android:text="@string/Stundent"/>

    <LinearLayout
        style="@style/linearBt"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/textView"
            android:text="@string/StudentCode" />

        <EditText
            android:id="@+id/edit_maPhong"
            style="@style/editText" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/textView"
            android:text="@string/surname" />

        <EditText
            android:id="@+id/edit_loaiPhong"
            style="@style/editText" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/textView"
            android:text="@string/brithday" />

        <EditText
            android:id="@+id/edit_tang"
            style="@style/editText"
            android:layout_marginStart="35sp"
            android:inputType="number"
            android:layout_marginLeft="35sp" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearBt"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/textView"
            android:text="@string/Name" />

        <EditText
            android:id="@+id/edit_ngaysinh"
            style="@style/editText"
            android:layout_marginStart="35sp"
            android:inputType="number"
            android:layout_marginLeft="35sp" />

    </LinearLayout>


    <LinearLayout
        style="@style/linearBt"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/bt_add"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_add_circle_24"
            android:text="@string/add"
            android:drawableLeft="@drawable/ic_baseline_add_circle_24" />

        <Button
            android:id="@+id/bt_remove"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_remove_circle_24"
            android:text="@string/remove"
            android:drawableLeft="@drawable/ic_baseline_remove_circle_24" />

        <Button
            android:id="@+id/bt_update"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_update_24"
            android:text="@string/update"
            android:drawableLeft="@drawable/ic_baseline_update_24" />

        <Button
            android:id="@+id/bt_clear"
            style="@style/button"
            android:drawableStart="@drawable/ic_baseline_clear_all_24"
            android:text="@string/clear"
            android:drawableLeft="@drawable/ic_baseline_clear_all_24" />

    </LinearLayout>

    <ListView
        android:id="@+id/listRoom"
        style="@style/lv"
        android:layout_marginTop="5dp" />

</LinearLayout>