<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        style="@style/registration_account"
        android:text="@string/Registration"
        android:textStyle="bold"
       >

    </TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tkdk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginTop="50px"
            style="@style/txt"
            android:id="@+id/txtdkusername"
            android:hint="@string/username"
            ></EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mkdk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_marginTop="50px"
            style="@style/txt"
            android:id="@+id/txtdkpasswork"
            android:hint="@string/password"
            ></EditText>

    </com.google.android.material.textfield.TextInputLayout>



    <LinearLayout
        android:layout_marginTop="100px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <Button
            android:layout_marginRight="100dp"
            android:id="@+id/btncancel"
            style="@style/btn"
            android:text="@string/cancel"
            android:background="#488BC34A"
            >


        </Button>

        <Button
            android:id="@+id/btnagree"
            style="@style/btn"
            android:text="@string/agree"
            android:background="#488BC34A"
            >


        </Button>
    </LinearLayout>

</LinearLayout>